config response for event service and game service